# plane-notify

./: .gitignore  .python-version  ADSBX.py  AppendAirport.py  Dockerfile  NotifyBot.py  NotifyBotMulti.py  OpenSky Bot testing.py  OpenSky Bot.py  Pipfile  PseudoCode.md  README.md  REC.sh  References.md  Refrences.md  __main__.py  aircraft_type_fuel_consumption_rates.json  airport_utils.py  calculate_headings.py  config.ini  config.py  defADSBX.py  defAirport.py  defApiFachaDev.py  defDiscord.py  defMap.py  defMastodon.py  defOpenSky.py  defRpdADSBX.py  defSS.py  defTelegram.py  defTweet.py  discord_utils.py  docker-compose.yml  eagle.sh  fuel_calc.py  mainconf.ini  map_utils.py  meta_toolkit.py  mictronics_parse.py  (+10 more)
configs/: mainconf.ini  mainconf.ini.example  plane1.ini  plane1.ini.example  plc1.ini
dependencies/: dbversion.json  operators.json  regions.csv  types.json
plane_notify/: __main__.py  calculate_headings.py  defADSBX.py  defAirport.py  defDiscord.py  defMap.py  defRpdADSBX.py  defSS.py  defTelegram.py  fuel_calc.py  meta_toolkit.py  modify_image.py  planeClass.py
